--- a/1_web_portfolio/index.html
+++ b/1_web_portfolio/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peter Web Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fanta.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    
+    <header>
+        <a href="/">Peter Gy</a>
+        <nav>
+            <a target="_blank" href="https://github.com/apgyorfi"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" href="https://linkedin.com/in/apgyorfi"><i class="fa-brands fa-linkedin"></i></a>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>By <a href="https://apgyorfi.dev" target="_blank">apgyorfi</a> ⭐ the repo on <a target="_blank" href="https://github.com/apgyorfi/full-stack-course/">GitHub</a></p>
+    </footer>
+    <script></script>
 </body>
 </html>
