--- a/1_web_portfolio/index.html
+++ b/1_web_portfolio/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Web Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fanta.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
     <header>
         <a href="/">Peter Gy</a>
@@ -18,11 +22,52 @@
         </nav>
     </header>
     <main>
+        <section>
+            <div class="intro-header">
+                <h1>Kia ora! I'm Peter...</h1>
+                <p>Software Developer</p>
+            </div>
+            <h5 class="intro-description">
+                A civil engineer by qualification, and a software developer by trade. Based in Hunhary, I love to walk,
+                play video games, and build out all of fun and useful internet applications!
+            </h5>
+            <div class="links-container">
+                <a href="mailto:hello@apgyorfi.dev">
+                    <i class="fa-solid link-arrow fa-arrow-right"></i> Email me
+                </a>
+                <a target="_blank" href="https://github.com/apgyorfi">GitHub</a>
+                <a target="_blank" href="https://linkedin.com/in/apgyorfi">LinkedIn</a>
+            </div>
 
+            <div id="play-game">
+                <button onclick="">Play game???</button>
+            </div>
+            <div class="color-div">
+                <h4>Pick a color</h4>
+                <p style="display: none;">Great... not ir's ruined!</p>
+                <input type="color" id="color-picker" onchange="" value="#0084ff">
+                <button style="display: none;">Reset</button>
+            </div>
+        </section>
+
+        <section>
+            <h2>Skills</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <td>Area</td>
+                        <td>Technologies</td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </section>
     </main>
     <footer>
-        <p>By <a href="https://apgyorfi.dev" target="_blank">apgyorfi</a> ⭐ the repo on <a target="_blank" href="https://github.com/apgyorfi/full-stack-course/">GitHub</a></p>
+        <p>By <a href="https://apgyorfi.dev" target="_blank">apgyorfi</a> ⭐ the repo on <a target="_blank"
+                href="https://github.com/apgyorfi/full-stack-course/">GitHub</a></p>
     </footer>
     <script></script>
 </body>
+
 </html>
