Portfolio Main Content

--- a/1_web_portfolio/index.html
+++ b/1_web_portfolio/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="color-div">
                 <h4>Pick a color</h4>
-                <p style="display: none;">Great... not ir's ruined!</p>
+                <p style="display: none;">Great... now it's ruined!</p>
                 <input type="color" id="color-picker" onchange="" value="#0084ff">
                 <button style="display: none;">Reset</button>
             </div>
@@ -55,12 +55,109 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Area</td>
-                        <td>Technologies</td>
+                        <th>Area</th>
+                        <th>Technologies</th>
                     </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>ReactJS | React Native | NextJS | NodeJS & ExpressJS | SvelteKit | Qwik</td>
+                    </tr>                    
+                    <tr>
+                        <td>Python</td>
+                        <td>Data analysis | Django | Data visualization</td>
+                    </tr>                    
+                    <tr>
+                        <td>Web</td>
+                        <td>TailwindCSS | FantaCSS | Firebase | PostgreSQL | CI/CD | GIT | Docker | Kubernetes | AWS</td>
+                    </tr>                    
+                    <tr>
+                        <td>Design</td>
+                        <td>Canvas | Pixlr | Microsoft Paint</td>
+                    </tr>
+                </tbody>
             </table>
+        </section>
+
+        <section>
+            <h2>Latest Projects</h2>
+            <div class="cards-grid">
+                <div class="project-card">
+                    <div>
+                        <p>July 15, 2023</p>
+                        <h4>Smoljames</h4>
+                        <div class="tech-list">
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>
+                        </div>
+                        <p>Smoljames is a hub for all thing learnings learning to code and landing a job as a software developer.</p>
+                        <div class="project-links">
+                            <a target="_blank" href="https://smoljames.com">Live</a>                            <a target="_blank" href="https://github.com/jamezmca">GitHub</a>
+                        </div>
+                    </div>                        
+                    <div class="img-div">
+                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div>
+                        <p>July 15, 2023</p>
+                        <h4>Smoljames</h4>
+                        <div class="tech-list">
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>
+                        </div>
+                        <p>Smoljames is a hub for all thing learnings learning to code and landing a job as a software developer.</p>
+                        <div class="project-links">
+                            <a target="_blank" href="https://smoljames.com">Live</a>                            <a target="_blank" href="https://github.com/jamezmca">GitHub</a>
+                        </div>
+                    </div>                        
+                    <div class="img-div">
+                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div>
+                        <p>July 15, 2023</p>
+                        <h4>Smoljames</h4>
+                        <div class="tech-list">
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>                            
+                            <div class="card-button-secondary">
+                                <p>NextJS</p>
+                            </div>
+                        </div>
+                        <p>Smoljames is a hub for all thing learnings learning to code and landing a job as a software developer.</p>
+                        <div class="project-links">
+                            <a target="_blank" href="https://smoljames.com">Live</a>                            <a target="_blank" href="https://github.com/jamezmca">GitHub</a>
+                        </div>
+                    </div>                        
+                    <div class="img-div">
+                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
