--- a/1_web_portfolio/index.html
+++ b/1_web_portfolio/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter Web Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fanta.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -104,7 +104,7 @@
                         </div>
                     </div>                        
                     <div class="img-div">
-                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                        <img src="public/smoljames.png" alt="smoljames-thumbnail">
                     </div>
                 </div>
                 
@@ -129,7 +129,7 @@
                         </div>
                     </div>                        
                     <div class="img-div">
-                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                        <img src="public/smoljames.png" alt="smoljames-thumbnail">
                     </div>
                 </div>
                 
@@ -154,7 +154,7 @@
                         </div>
                     </div>                        
                     <div class="img-div">
-                        <img src="/1_web_portfolio/public/smoljames.png" alt="smoljames-thumbnail">
+                        <img src="public/smoljames.png" alt="smoljames-thumbnail">
                     </div>
                 </div>
             </div>
